--- a/htdocs/css/kmom01_v2.css
+++ b/htdocs/css/kmom01_v2.css
@@ -14,6 +14,12 @@
  * This stylesheet is for the design course and kmom01. Fill it with style
  * to style up the website so it is useable.
  */
+/* Poor_mans normalize */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* Hide submenu, leave this to kmom02 */
 .rm-desktop ul {
   display: none;
@@ -22,15 +28,100 @@
 .rm-navbar-max {
   display: none;
 }
+/* Containers */
+.wrap-all {
+  background-color: #fff;
+}
 /* Header */
+.inner-wrap-header {
+  border-radius: 1em;
+  border: 0.1em solid #000;
+}
+.inner-wrap-header > .row {
+  padding: 0.1em;
+}
+.site-logo-text a {
+  color: #333;
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: none;
+}
+.region-header-col-2 a {
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+}
+.region-header-col-2 a:hover {
+  text-decoration: underline;
+}
 /* Flash */
+.region-flash {
+  text-align: center;
+}
 /* flashmessage */
+.info {
+  border: 0.1em solid #000;
+  background-color: #66c2ff;
+  color: #0000cc;
+}
 /* Breadcrumb */
-/* Main */
+.breadcrumb-list a {
+  color: #333;
+  text-decoration: none;
+}
+.breadcrumb-list a::after {
+  content: " >> ";
+}
+.breadcrumb-list a:hover {
+  text-decoration: underline;
+}
 /* sidebar */
-/* Form */
+.wrap-sidebar .block h4 {
+  border-top: 0.1em solid #000;
+  background-image: linear-gradient(to right, #fff, #99d6ff);
+}
+.toc .selected {
+  background-color: #ccebff;
+  font-style: italic;
+}
+.toc .section-header {
+  font-weight: bold;
+  border-bottom: 0.1em solid #000;
+}
 /* Byline */
+.byline {
+  border: 0.1em solid #000;
+}
+.byline-img-description {
+  font-style: italic;
+}
+.byline a {
+  color: #333;
+}
 /* Footer */
+.inner-wrap-footer {
+  background-color: #0066ff;
+  border-radius: 1em;
+  border: 0.1em solid #000;
+  color: #fff;
+}
+.inner-wrap-footer a {
+  color: #fff;
+  text-decoration: none;
+}
+.inner-wrap-footer a:hover {
+  text-decoration: underline;
+}
+.footer-column-wrapper {
+  border-radius: 1em;
+  border: 0.1em solid #0000cc;
+}
+.footer-column {
+  text-align: center;
+}
+.region-footer > .block {
+  text-align: center;
+}
 /**
  * Style for the stylechooser.
  */
@@ -57,17 +148,17 @@ html {
 }
 body {
   color: #333;
-  margin: 0.5em, 0, 0.5em, 0;
 }
 h1 {
   font-size: 2.5em;
   font-weight: bold;
   border-bottom: 0.1em solid #000;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 h2 {
   font-size: 2em;
 }
-h1,
 h2,
 h3,
 h4,
@@ -82,6 +173,12 @@ ul {
 }
 code {
   background-color: #eee;
+}
+img {
+  max-width: 100%;
+}
+iframe {
+  max-width: 100%;
 }
 /**
  * Layout style for general structure of header, navbar, main, footer
@@ -99,7 +196,6 @@ code {
  */
 .wrap-all {
   border-radius: 1em;
-  background-color: #fff;
   width: 90%;
   margin: 0 auto;
   overflow: auto;
@@ -121,13 +217,8 @@ code {
 /**
 * Header layout
 */
-.outer-wrap-header {
-  margin-top: 0.5em;
-}
-.inner-wrap-header > .row {
-  border-radius: 1em;
-  border: 0.1em solid #000;
-  padding: 0.1em;
+.inner-wrap-header {
+  width: inherit;
 }
 .region-header {
   overflow: auto;
@@ -135,44 +226,28 @@ code {
 .region-header-col-1 {
   float: left;
   width: 15%;
-  margin-left: 1em;
+  padding-left: 1em;
 }
 .site-logo {
   display: none;
 }
-.site-logo-text a {
-  color: #333;
-  font-style: italic;
-  font-weight: bold;
-  text-decoration: none;
-}
 .region-header-col-2 {
+  float: left;
   width: 70%;
-}
-.region-header-col-2 a {
-  color: #333;
-  font-weight: bold;
-  text-decoration: none;
-}
-.region-header-col-2 a:hover {
-  text-decoration: underline;
 }
 .my-navbar {
   list-style-type: none;
+  padding-top: 1em;
 }
 .my-navbar li {
   display: inline;
-  padding: 0.1em 1em;
+  padding: 0.1em 0.5em;
 }
 /**
 * Flash layout
 */
 .region-flash img {
   display: inline-block;
-  max-width: 100%;
-}
-.region-flash {
-  text-align: center;
 }
 /**
 * Flashmessage layout
@@ -186,9 +261,6 @@ code {
   overflow: auto;
 }
 .info {
-  border: 0.1em solid #000;
-  background-color: #66c2ff;
-  color: #0000cc;
   padding: 0.5em;
   margin-bottom: 1em;
   overflow: auto;
@@ -202,16 +274,6 @@ code {
 */
 .outer-wrap-breadcrumb {
   clear: both;
-}
-.breadcrumb-list a {
-  color: #333;
-  text-decoration: none;
-}
-.breadcrumb-list a::after {
-  content: " >> ";
-}
-.breadcrumb-list a:hover {
-  text-decoration: underline;
 }
 /**
 * Main layout
@@ -240,12 +302,6 @@ main.has-sidebar-left {
 .figure.left {
   float: left;
 }
-.figure img {
-  max-width: 100%;
-}
-.figure iframe {
-  max-width: 100%;
-}
 .next {
   float: right;
 }
@@ -261,17 +317,7 @@ main.has-sidebar-left {
 .region-sidebar-left {
   float: left;
 }
-.wrap-sidebar .block h4 {
-  border-top: 0.1em solid #000;
-  background-image: linear-gradient(to right, #fff, #99d6ff);
-}
-.toc .selected {
-  background-color: #ccebff;
-  font-style: italic;
-}
 .toc .section-header {
-  font-weight: bold;
-  border-bottom: 0.1em solid #000;
   margin-top: 1em;
   margin-bottom: 0.5em;
 }
@@ -290,7 +336,6 @@ label {
 .byline {
   /* Makes all elements be cointained inside the byline */
   max-width: 40em;
-  border: 0.1em solid #000;
   padding: 0.25em;
   margin-top: 1em;
   clear: left;
@@ -305,7 +350,6 @@ label {
 .byline-img-description {
   float: left;
   clear: left;
-  font-style: italic;
 }
 .byline a {
   /* Makes the link be inline with the byline text */
@@ -329,29 +373,20 @@ label {
   margin-bottom: 0.5em;
 }
 .inner-wrap-footer {
-  padding: 2em;
-  background-color: #0066ff;
-  border-radius: 1em;
-  border: 0.1em solid #000;
-  color: #fff;
+  padding-top: 2em;
 }
-.inner-wrap-footer a {
-  color: #fff;
-  text-decoration: none;
-}
-.inner-wrap-footer a:hover {
-  text-decoration: underline;
+.region-footer {
+  padding-left: 1em;
+  padding-right: 1em;
 }
 .footer-column-wrapper {
-  border-radius: 1em;
-  border: 0.1em solid #0000cc;
   overflow: auto;
 }
 .footer-column-x {
   display: inline;
   float: left;
   width: 33%;
-  text-align: center;
+  overflow: auto;
 }
 .footer-column-2 {
   display: none;
@@ -361,15 +396,64 @@ label {
 }
 .region-footer > .block {
   padding-top: 1em;
-  text-align: center;
   clear: both;
 }
 /**
  * Layout for responsive style through media queries.
  */
-@media screen and (max-width: 1500px) {
-  .site-logo {
+/**
+ * Navbar
+ */
+@media screen and (max-width: 800px) {
+  .region-header-com-3 {
+    display: inline;
+  }
+  .rm-desktop a {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+}
+@media screen and (max-width: 680px) {
+  .wrap-all {
+    width: 100%;
+  }
+  .region-header-col-1 {
+    width: 40%;
+  }
+  .region-header-col-2 {
     display: none;
+  }
+  .region-header-col-3 {
+    display: inline;
+    width: 40%;
+  }
+  .has-sidebar {
+    display: block;
+  }
+  .region-sidebar-left {
+    width: 100%;
+  }
+  .region-sidebar-left.has-sidebar-left.has-sidebar-right,
+  .region-sidebar-left .has-sidebar-right.has-sidebar-left {
+    width: 100%;
+  }
+  .region-sidebar-right {
+    width: 100%;
+  }
+  .region-sidebar-right.has-sidebar-left.has-sidebar-right,
+  .region-sidebar-right .has-sidebar-right.has-sidebar-left {
+    width: 100%;
+  }
+  .region-main.has-sidebar {
+    width: 100%;
+  }
+  .region-main.has-sidebar.has-sidebar-left.has-sidebar-right,
+  .region-main.has-sidebar .has-sidebar-right.has-sidebar-left {
+    width: 100%;
+  }
+  .footer-column-x {
+    display: block;
+    width: 100%;
   }
 }
 /**
