--- a/theme/src/base/base.less
+++ b/theme/src/base/base.less
@@ -3,8 +3,8 @@
  */
 @bgColorHtml1: #00f;
 @bgColorHtml2: #0909ff;
-@textColor: #333;
 @borderColor: #000;
+@textColor: #333;
 @codeColor: #eee;
 @fontFamilyBody: 'EB Garamond', serif;
 
@@ -22,20 +22,21 @@ html {
 
 body {
     color: @textColor;
-    margin: 0.5em, 0, 0.5em, 0;
 }
 
 h1 {
     font-size: 2.5em;
     font-weight: bold;
     border-bottom: 0.1em solid @borderColor;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 h2 {
     font-size: 2em;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h2, h3, h4, h5, h6, p {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
@@ -46,4 +47,12 @@ ul {
 
 code {
     background-color: #eee;
+}
+
+img {
+    max-width: 100%;
+}
+
+iframe {
+    max-width: 100%;
 }
