--- a/theme/htdocs/css/kmom03.css
+++ b/theme/htdocs/css/kmom03.css
@@ -5470,6 +5470,7 @@ html {
 body {
   font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+  overflow-x: hidden;
 }
 ul {
   list-style: none;
@@ -5752,9 +5753,6 @@ iframe {
 /**
  * Header layout
  */
-.inner-wrap-header {
-  overflow: hidden;
-}
 .site-logo {
   display: none;
 }
